MDEV-39663: Assertion `found_tables > 0' failed

Early on in FULL OUTER JOIN development, it seemed prudent to
attach the ON condition to both tables during FULL OUTER JOIN
parsing, because either table in the join could be considered
the inner or outer table, depending on perspective.  This
decision ended up complicating both simplify_joins and the
FULL JOIN rewrites to other join types, as well as dependent
table propagation during make_join_statistics.  Dependent
table propagation was not correct because both tables in the
FULL JOIN carried the ON expression which confused
make_join_statistics.

We could update make_join_statistics to propagate dependent
tables for both sides of a join, but that's essentially changing
the mainstream join processing path for the sake of one case
case.  Instead, just stop attaching the ON condition to both
tables in a FULL OUTER JOIN, which simplifies the FULL JOIN
rewrites and relies on pre-existing table dependency propagation
in make_join_statistics.